--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,16 @@ h1{
   line-height: 1.5;
   font-weight: 900;
 }
-h3{
+h2{
   font-family: "Montserrat-bold",sans-serif;
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
+
+
+}
+h3{
+  font-family: "Montserrat-Bold",sans-serif;
   font-weight: 900;
 }
 p{
@@ -67,8 +75,47 @@ p{
 .icon{
   color: #ef8172;
   margin-bottom: 1rem;
+
 }
 
 .icon:hover{
   color: #ff4c68;
+}
+
+/* testimonial section */
+#testimonials{
+  text-align: center;
+  background-color: #ef8172;
+  color: white;
+}
+
+.testimonials-image{
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+#press{
+  text-align: center;
+  background-color: #ef8172;
+  padding:3%;
+}
+.press-logo{
+  width: 15%;
+  margin: 1% 2% 2%;
+}
+
+.carousel-item{
+  padding: 7% 15%;
+}
+
+/* pricing section */
+
+#pricing{
+  padding:100px;
+}
+
+.pricing-col{
+  padding: 3% 2%;
+  text-align: center;
+
 }
