--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body{
   background-color: #ff4c68;
   color: #fff;
 }
+
 h1{
   font-family: 'Montserrat-Black',sans-serif;
   font-size: 3.5rem;
@@ -28,7 +29,7 @@ p{
   color: #8f8f8f;
 }
 .container-fluid{
-  padding:3% 15%;
+  padding:3% 15% 7%;
 }
 /* navigation bar */
 .navbar{
@@ -60,12 +61,19 @@ p{
 .Title-image{
   transform: rotate(25deg);
   width:60%;
+  position: absolute;
+  right: 30%;
+}
+.imageTItle{
+  position:relative;
 }
 
 /* feature part */
 
 #features{
   padding: 7% 15%;
+  background-color: white;
+  position: relative;
 }
 
 .feature-part{
@@ -118,4 +126,36 @@ p{
   padding: 3% 2%;
   text-align: center;
 
+}
+
+@media (max-width: 1028px) {
+  .Title-image{
+    position: static;
+    transform: rotate(0);
+  }
+  #title{
+    text-align: center;
+  }
+
+}
+
+#cta{
+  background-color: #ff4c68;
+  text-align: center;
+  color: white;
+}
+.h3-l{
+  font-family: 'Montserrat-Black',sans-serif;
+  font-weight: 900;
+  font-size: 2.5rem;
+  padding: 5% 15%;
+  line-height: 1.5;
+}
+#footer{
+  padding:7% 15%;
+  text-align:center;
+}
+
+.social-icon{
+  padding: 2.5% 1.5%;
 }
